// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupedFields invalid: can render an invalid state when both fields are invalid 1`] = `
<div>
  <div
    class="css-14covec-boxStyles-FieldContainer"
  >
    <fieldset
      class="css-5wkuiz-boxStyles"
    >
      <legend
        class="css-1h6rv12-boxStyles"
      >
        <span
          class="css-jro2y9-boxStyles-Text"
        >
          Grouped fields
        </span>
        <span
          class="css-k6o2y8-boxStyles-Text"
        >
           
          (optional)
        </span>
      </legend>
      <div
        class="css-1boy5h3-boxStyles-GroupedFields"
      >
        <div
          class="css-1ogxqpt-boxStyles"
        >
          <div
            class="css-xc7nz3-boxStyles"
          >
            <svg
              aria-hidden="false"
              aria-label="Error"
              class="css-1cvvs16-FieldMessage"
              clip-rule="evenodd"
              fill-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.4661 0.5C16.7332 0.5 16.9893 0.6069 17.1771 0.796862L23.2111 6.89871C23.3962 7.08591 23.5 7.33857 23.5 7.60185V16.3935C23.5 16.6595 23.394 16.9146 23.2055 17.1023L17.0712 23.2087C16.8838 23.3953 16.6301 23.5 16.3657 23.5H7.63889C7.37177 23.5 7.11576 23.3931 6.92792 23.2032L0.789033 16.9968C0.60386 16.8095 0.5 16.5569 0.5 16.2935V7.60646C0.5 7.34045 0.605983 7.08541 0.794505 6.89774L6.92885 0.791284C7.11625 0.604732 7.36991 0.5 7.63434 0.5H16.4661ZM16.7071 7.29289C17.0976 7.68342 17.0976 8.31658 16.7071 8.70711L13.4142 12L16.7071 15.2929C17.0976 15.6834 17.0976 16.3166 16.7071 16.7071C16.3166 17.0976 15.6834 17.0976 15.2929 16.7071L12 13.4142L8.70711 16.7071C8.31658 17.0976 7.68342 17.0976 7.29289 16.7071C6.90237 16.3166 6.90237 15.6834 7.29289 15.2929L10.5858 12L7.29289 8.70711C6.90237 8.31658 6.90237 7.68342 7.29289 7.29289C7.68342 6.90237 8.31658 6.90237 8.70711 7.29289L12 10.5858L15.2929 7.29289C15.6834 6.90237 16.3166 6.90237 16.7071 7.29289Z"
                fill="currentColor"
                stroke="none"
              />
            </svg>
          </div>
          <span
            class="css-1s1crk9-boxStyles-Text"
            id="grouped-fields-:r6:-message"
          >
            Enter a valid value
          </span>
        </div>
        <div
          class="css-4nrkwy-boxStyles"
        >
          <div
            class="css-o0wi17-boxStyles-FieldContainer"
          >
            <label
              class="css-5wkuiz-boxStyles"
              for="field-:r7:"
            >
              <span
                class="css-jro2y9-boxStyles-Text"
              >
                TextInput
              </span>
              <span
                class="css-k6o2y8-boxStyles-Text"
              >
                 
                (optional)
              </span>
            </label>
            <input
              aria-describedby="grouped-fields-:r6:-message"
              aria-invalid="true"
              aria-required="false"
              class="css-mtd7ku"
              id="field-:r7:"
              type="text"
            />
            <div
              aria-hidden="true"
              class="css-9l8g4f-Field"
            />
          </div>
          <div
            class="css-o0wi17-boxStyles-FieldContainer"
          >
            <label
              class="css-5wkuiz-boxStyles"
              for="field-:r8:"
            >
              <span
                class="css-jro2y9-boxStyles-Text"
              >
                Select
              </span>
              <span
                class="css-k6o2y8-boxStyles-Text"
              >
                 
                (optional)
              </span>
            </label>
            <div
              class="css-1bg5d3h-SelectContainer"
            >
              <select
                aria-describedby="grouped-fields-:r6:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-kwpsq8"
                id="field-:r8:"
              >
                <option
                  value=""
                >
                  Please select
                </option>
                <option
                  value="a"
                >
                  Option A
                </option>
                <option
                  value="b"
                >
                  Option B
                </option>
                <option
                  value="c"
                >
                  Option C
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="css-hjf33j-SelectIcon"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </div>
            <div
              aria-hidden="true"
              class="css-9l8g4f-Field"
            />
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`GroupedFields renders correctly 1`] = `
<div>
  <div
    class="css-o0wi17-boxStyles-FieldContainer"
  >
    <fieldset
      class="css-5wkuiz-boxStyles"
    >
      <legend
        class="css-1h6rv12-boxStyles"
      >
        <span
          class="css-jro2y9-boxStyles-Text"
        >
          Grouped fields
        </span>
        <span
          class="css-k6o2y8-boxStyles-Text"
        >
           
          (optional)
        </span>
      </legend>
      <div
        class="css-1boy5h3-boxStyles-GroupedFields"
      >
        <div
          class="css-4nrkwy-boxStyles"
        >
          <div
            class="css-o0wi17-boxStyles-FieldContainer"
          >
            <label
              class="css-5wkuiz-boxStyles"
              for="field-:r1:"
            >
              <span
                class="css-jro2y9-boxStyles-Text"
              >
                TextInput
              </span>
              <span
                class="css-k6o2y8-boxStyles-Text"
              >
                 
                (optional)
              </span>
            </label>
            <input
              aria-invalid="false"
              aria-required="false"
              class="css-mtd7ku"
              id="field-:r1:"
              type="text"
            />
            <div
              aria-hidden="true"
              class="css-9l8g4f-Field"
            />
          </div>
          <div
            class="css-o0wi17-boxStyles-FieldContainer"
          >
            <label
              class="css-5wkuiz-boxStyles"
              for="field-:r2:"
            >
              <span
                class="css-jro2y9-boxStyles-Text"
              >
                Select
              </span>
              <span
                class="css-k6o2y8-boxStyles-Text"
              >
                 
                (optional)
              </span>
            </label>
            <div
              class="css-1bg5d3h-SelectContainer"
            >
              <select
                aria-invalid="false"
                aria-required="false"
                class="css-kwpsq8"
                id="field-:r2:"
              >
                <option
                  value=""
                >
                  Please select
                </option>
                <option
                  value="a"
                >
                  Option A
                </option>
                <option
                  value="b"
                >
                  Option B
                </option>
                <option
                  value="c"
                >
                  Option C
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="css-hjf33j-SelectIcon"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </div>
            <div
              aria-hidden="true"
              class="css-9l8g4f-Field"
            />
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
